Attempt at fixing video not working on mobile

--- a/styles.css
+++ b/styles.css
@@ -256,7 +256,6 @@ header {
 
 .hero-gif {
     width: 600px;
-    height: auto;
     flex: 1;
 }
 
@@ -266,7 +265,10 @@ header {
     }
 }
 
-.hero-gif video {
+video {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
     border-radius: 0.3rem;
     box-shadow: 0px 0px 8px -3px rgba(11, 11, 16, 0.8);
 }
